# blksprs

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: blksprs_publish.yml  blksprs_test.yml
blksprs/: __init__.py  blocksparse.py
blksprs/experimental/: distribution_3d.py  distribution_mdi.py
blksprs/layouting/: distribution_layout.py  sparsity_layout.py
blksprs/misc/: broadcast_addition.py  broadcast_ops.py  exp.py  partitioning.py  repeat_interleave.py  row_wise.py
blksprs/ops/: blocksparse.py  conversion.py  distribution.py  exp.py  flash_attention.py  flow.py  gather.py  matmul.py  matmul_sss.py  partitioning.py  repeat.py  row_wise_sum.py  scatter.py  softmax.py  softmax_old.py  to_dense.py  to_sparse.py  tools.py  transpose.py
blksprs/ops/experimental/: distribution_mdi.py
blksprs/ops/misc/: broadcast_ops.py  exp.py  partitioning.py  row_wise.py
blksprs/utils/: autotuning.py  benchmarking.py  blksprs_tensor.py  layout_utils.py  layouting.py  processing.py  tools.py  validation.py
test/: pytest.ini
test/cases/: asdf.py  benchmark.py  test_blocksparse.py  test_dev.py  test_flash_attention.py  test_readme.py
test/dev/: issue_6376.py
test/util/: debugging.py
