[project]
name = "blksprs"
version = "1.10.2"
authors = [{ name = "Felix Schön", email = "schoen@kr.tuwien.ac.at" }]
description = "A lightweight library for operations on blocksparse matrices in PyTorch."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
dependencies = [
    "torch",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/FelixSchoen/blksprs"
"Bugtracker" = "https://github.com/FelixSchoen/blksprs/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "matplotlib"
]
build = [
    "build"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.json", "*.conf"]