[project]
name = "blksprs"
version = "2.1.2"
authors = [{ name = "Felix Schön", email = "schoen@kr.tuwien.ac.at" }]
description = "A lightweight library for operations on block-sparse matrices in PyTorch."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
dependencies = [
    "torch",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/FelixSchoen/blksprs"
"Bugtracker" = "https://github.com/FelixSchoen/blksprs/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "build",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.json", "*.conf"]